{
    "name": "PhysicsGameControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "5918c80d-f67d-4526-857f-d769c93203c2",
            "actions": [
                {
                    "name": "Pitch",
                    "type": "Value",
                    "id": "21bc1512-8d02-4154-aa8f-41fd322bb75a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CamRotate",
                    "type": "Value",
                    "id": "284b940d-aaac-429f-be6f-a9ed4b287a70",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "194d9415-93ea-49fd-9a0f-ef300a71b19e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7db59f0-6697-455f-a639-ffdc02859c2a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "CamRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PS4 Controller",
            "bindingGroup": "PS4 Controller",
            "devices": [
                {
                    "devicePath": "<DualShockGamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}